<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OnTheWay</string>
    <string name="time">早晨 8:00  傍晚 17:30</string>
    <string name="name">昵称</string>
    <string name="sex">性别</string>
    <string name="set_username">设置昵称</string>
    <string name="quite">退出共享</string>   
    <string name="confirm">确定</string>  
    <string name="confirm_quit">确定要退出共享?</string> 
    <string name="cancel">取消</string>           
</resources>