<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f2f2f2"
    android:orientation="vertical" >
    <RelativeLayout
        android:id="@+id/set_relativiLayout_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/banner" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/title" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/back_button_style" />      
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/set_relativiLayout_two"
        android:layout_below="@+id/set_relativiLayout_one"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:background="@drawable/shape"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">
        
     <RelativeLayout
        android:id="@+id/set_relativiLayout_three"
        android:layout_width="match_parent"
        android:layout_height="50dp">
     <TextView
            android:id="@+id/nameTextView"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginLeft="9dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="#838383"
            android:textSize="20dp" />
     <EditText 
         android:id="@+id/nameEditText"
         android:background="@color/white"
         android:layout_toRightOf="@+id/nameTextView"
         android:layout_width="match_parent"
         android:layout_height="40dp"     
         android:layout_marginRight="9dp"
         android:layout_centerVertical="true"
         android:gravity="center_vertical"
         android:singleLine="true"
         android:textSize="20dp"
         android:textColor="@color/black"/>
       </RelativeLayout>
       
        <View
        android:id="@+id/set_view"
        android:layout_below="@+id/set_relativiLayout_three"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#dddddd" />
       
     <RelativeLayout
        android:layout_below="@+id/set_view"       
        android:layout_width="match_parent"
        android:layout_height="match_parent">
     <TextView
            android:id="@+id/sexTextView"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginLeft="9dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/sex"
            android:textColor="#838383"
            android:textSize="20dp" />
      <EditText 
         android:id="@+id/sexEditText"
         android:background="@color/white"      
         android:layout_toRightOf="@+id/sexTextView"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginRight="9dp"
         android:layout_centerVertical="true"
         android:gravity="center_vertical"
         android:singleLine="true"
         android:textSize="20dp"
         android:textColor="@color/black"/> 
     
       </RelativeLayout>
         </RelativeLayout> 
       <Button
            android:id="@+id/button_quitShare"
            android:layout_below="@+id/set_relativiLayout_two"
            android:layout_width="fill_parent"
            android:layout_height="40dp"  
            android:layout_marginLeft="9dp"        
            android:layout_marginRight="9dp"
            android:layout_marginTop ="9dp"
            android:background="@drawable/quit_button_style"
            android:text="@string/quite"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:gravity="center" />
       
</RelativeLayout>